--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,12 +11,12 @@
     <div class="overlay"></div>
     <img src="{{ asset('images/background.jpg') }}" alt="Background" class="background-img" decoding="async">
 
-    <div class="masthead">
-    <div class="masthead-bg"></div>
+    <div class="coming-soon">
+    <div class="coming-soon-bg"></div>
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-12 my-auto">
-                <div class="masthead-content text-white py-5 py-md-0">
+                <div class="coming-soon-content text-white py-5 py-md-0">
                 <h1 class="mb-3">Bienvenue sur le site de notre mariage !</h1>
                 <p class="mb-5">Ce site n'est pas encore prêt, mais vous pouvez nous laisser votre adresse e-mail pour que l'on vous prévienne dès qu'il sera opérationnel.</p>
                 
