Added a "Coming soon" flag

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,35 +8,7 @@
 
 {% block body %}
 
-    <div class="overlay"></div>
-    <img src="{{ asset('images/background.jpg') }}" alt="Background" class="background-img" decoding="async">
-
-    <div class="coming-soon">
-    <div class="coming-soon-bg"></div>
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-12 my-auto">
-                <div class="coming-soon-content text-white py-5 py-md-0">
-                <h1 class="mb-3">Bienvenue sur le site de notre mariage !</h1>
-                <p class="mb-5">Ce site n'est pas encore prêt, mais vous pouvez nous laisser votre adresse e-mail pour que l'on vous prévienne dès qu'il sera opérationnel.</p>
-                
-                {% if not form.vars.submitted %}
-                    {{ form_start(form) }}
-                        <div class="input-group input-group-newsletter">
-                                {{ form_widget(form.email, {attr: {'class': 'form-control'}}) }}
-                            <div class="input-group-append">
-                                {{ form_widget(form.submit, {attr: {'class': 'btn btn-secondary'}}) }}
-                            </div>
-                        </div>
-                    {{ form_end(form) }}
-                {% else %}
-                    <div id="thankyou">{{ message }}</div>
-                {% endif %}
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
+Homepage
 
 {% endblock %}
 
