--- a/templates/main/coming-soon.html.twig
+++ b/templates/main/coming-soon.html.twig
@@ -11,7 +11,7 @@
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link href="{{ asset('css/font-awesome/css/all.min.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ asset('dist/font-awesome/all.min.css') }}" rel="stylesheet" type="text/css">
     
     <!-- Custom styles for this template -->
     <link href="{{ asset('css/coming-soon.css') }}" rel="stylesheet">
