Added a TextProvider Service to get texts from Admin pages

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,10 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
+{% block headTitle %} {{ text.homepage_title }} {% endblock %}
 
 {% block body %}
 
-Homepage
+{{ text.homepage_text }}
 
 {% endblock %}
 
