TextProvider is now a Twig extension + Added FosCKEditorBundle

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,11 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
-{% block headTitle %} {{ text.homepage_title }} {% endblock %}
+{% block headTitle %} {{ text('Accueil - Titre') }} {% endblock %}
 
 {% block body %}
 
-{{ text.homepage_text }}
+{{ text('Accueil - Texte') }}
 
 {% endblock %}
 
