TextProvider is used for all the main pages

--- a/templates/answer/index.html.twig
+++ b/templates/answer/index.html.twig
@@ -5,11 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
-{% block headTitle %} {{ text('Informations - Titre') }} {% endblock %}
+{% block headTitle %} {{ text('Réponse - Titre') }} {% endblock %}
 
 {% block body %}
 
-{{ text('Informations - Texte') }}
+{{ text('Votre réponse - Texte') }}
 
 {% endblock %}
 
