--- a/templates/main/access_map.html.twig
+++ b/templates/main/access_map.html.twig
@@ -5,10 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
+{% block headTitle %} {{ text('Plan - Titre') }} {% endblock %}
 
 {% block body %}
 
-Plan d'accès
+{{ text('Plan - Texte') }}
 
 {% endblock %}
 
