--- a/templates/main/accommodations.html.twig
+++ b/templates/main/accommodations.html.twig
@@ -5,10 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
+{% block headTitle %} {{ text('Hébergements - Titre') }} {% endblock %}
 
 {% block body %}
 
-Hébergements
+{{ text('Hébergements - Texte') }}
 
 {% endblock %}
 
