--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -5,10 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
+{% block headTitle %} {{ text('Contact - Titre') }} {% endblock %}
 
 {% block body %}
 
-Contactez-nous
+{{ text('Contact - Texte') }}
 
 {% endblock %}
 
