--- a/templates/wedding_list/index.html.twig
+++ b/templates/wedding_list/index.html.twig
@@ -5,10 +5,11 @@
     {{ parent() }}
 {% endblock %}
 
+{% block headTitle %} {{ text('Liste de mariage - Titre') }} {% endblock %}
 
 {% block body %}
 
-Liste de mariage
+{{ text('Liste de mariage - Texte') }}
 
 {% endblock %}
 
