Added map and contribution form for the wedding list

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="{{ path('answer') }}">Votre réponse</a>
                 </li>
                 <li class="nav-item {% if route  starts with 'gallery' %} active {% endif %}">
-                    <a class="nav-link" href="#">Albums photos</a>
+                    <a class="nav-link" href="{{ path('gallery') }}">Albums photos</a>
                 </li>
                 <li class="nav-item {% if route  starts with 'wedding_list' %} active {% endif %}">
                     <a class="nav-link" href="{{ path('wedding_list') }}">Liste de mariage</a>
