--- a/templates/answer/index.html.twig
+++ b/templates/answer/index.html.twig
@@ -1,20 +1,67 @@
 {% extends 'base.html.twig' %}
 
-
-{% block stylesheets %}
-    {{ parent() }}
-{% endblock %}
-
 {% block headTitle %} {{ text('Réponse - Titre') }} {% endblock %}
 
 {% block body %}
 
-{{ text('Votre réponse - Texte') }}
+    {{ text('Votre réponse - Texte') }}
 
-{% endblock %}
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <a href="{{ path('answer_form') }}" class="btn btn-success"><i class="fas fa-list"></i>&nbsp; Aller au formulaire de réponse</a>
+        </div>
+    </div>
 
+    <br>
 
-{% block javascript %}
-    {{ parent() }}
+    <div class="row justify-content-around">
+        {% for guest in guests %}
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="card guest">
+                    <div class="card-body">
+                        <h5 class="card-title"><i class="fas fa-user"></i>&nbsp; {{ guest }}</h5>
+                        <hr>
+                        {% if guest.hasAnswered and guest.absent %}
+                            <p class="d-none d-sm-block">&nbsp;</p>
+                            <p><i class="far fa-times-circle text-danger"></i> Ne viendra pas</p>
+                            <p class="d-none d-sm-block">&nbsp;</p>
+                        {% elseif guest.hasAnswered %}
+                            <p>
+                                {% if guest.attendCeremony %}
+                                    <i class="far fa-check-circle text-success"></i> Participe à la cérémonie
+                                {% else %}
+                                    <i class="far fa-times-circle text-danger"></i> Ne participe pas à la cérémonie
+                                {% endif %}
+                            </p>
+                            <p>
+                                {% if guest.attendMeal %}
+                                    <i class="far fa-check-circle text-success"></i> Participe au dîner
+                                {% else %}
+                                    <i class="far fa-times-circle text-danger"></i> Ne participe pas au dîner
+                                {% endif %}
+                            </p>
+                            <p>
+                                {% if guest.attendBrunch %}
+                                    <i class="far fa-check-circle text-success"></i> Participe au brunch
+                                {% else %}
+                                    <i class="far fa-times-circle text-danger"></i> Ne participe pas au brunch
+                                {% endif %}
+                            </p>
+                            {% if guest.veggie %}
+                                <p><em>Option végétarienne</em></p>
+                            {% endif %}
+                            {% if guest.specialDiet %}
+                                <p><em>{{ guest.specialDiet }}</em></p>
+                            {% endif %}
+                        {% else %}
+                            <p class="d-none d-sm-block">&nbsp;</p>
+                            <p class="text-muted text-center">En attente de réponse</p>
+                            <p class="d-none d-sm-block">&nbsp;</p>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
