Fixed the navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,15 @@
 /**********************/
+/*       GENERAL      */
+/**********************/
+
+
+@media (min-width:992px) {
+	#navbar-user-menu {
+		display: none !important;
+	}
+}
+
+/**********************/
 /*  LISTE DE MARIAGE  */
 /**********************/
 
