--- a/templates/wedding_list/index.html.twig
+++ b/templates/wedding_list/index.html.twig
@@ -3,11 +3,9 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
-	<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet"> 
-    <link href="{{ asset('css/map.css') }}" rel="stylesheet"> 
+    {{ encore_entry_link_tags('map') }}
 {% endblock %}
 
 {% block headTitle %} {{ text('Liste de mariage - Titre') }} {% endblock %}
@@ -33,13 +31,9 @@
 
 {% block javascript %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/leaflet.polylineDecorator.js') }}"></script>
-	<script type="text/javascript" src="{{ asset('js/L.Polyline.SnakeAnim.js') }}"></script>
-	<script type="text/javascript" src="{{ asset('js/oms.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('js/mobile-detect.js') }}"></script>
     <script>
         var markerList = {{ markerList|json_encode|raw }};
         var polylines = {{ polyline|json_encode|raw }};
-	</script>
-    <script type="text/javascript" src="{{ asset('js/map.js') }}"></script>
+    </script>
+    {{ encore_entry_script_tags('map') }}
 {% endblock %}
