--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,16 +1,37 @@
 
-@import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
 
 // Bootstrap overrides
 $primary: #790d0d;
+$gray-400: #ced4da;
 $enable-rounded: false;
 $input-bg: rgba(0, 0, 0, .5);
-$input-border-color: rgba(0, 0, 0, .6);;
+$input-border-color: rgba(0, 0, 0, .6);
 $text-muted: $gray-400;
-$body-color: $gray-400;
+//$body-color: $gray-400;
 $input-color: $gray-400;
 $input-disabled-bg: rgba(100, 100, 100, 0.5);
 $link-hover-color: lighten($link-color,10%);
+
+@import "~bootstrap/scss/bootstrap";
+
+.navbar-dark .navbar-nav .show > .nav-link, .navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .nav-link.active {
+	color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgb(255, 255, 255);
+}
+
+.form-control {
+	background-color: rgba(255, 255, 255, 0.8);
+}
+
+.card {
+	background-color: rgba(255, 255, 255, 0.9);
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+}
 
 /*******************************************************************/
 
@@ -18,6 +39,45 @@ $link-hover-color: lighten($link-color,10%);
 /*       GENERAL      */
 /**********************/
 
+body {
+	background-image: url('/images/background.jpg');
+	background-position: center top;
+	height: 100vh;
+}
+
+body > div.container {
+	margin: 20px auto;
+	padding: 15px;
+	box-shadow: 0 0 16px rgba(0, 0, 0, 0.4);
+	background: url('/images/background_blur.jpg');
+	background-position: center -76px;
+}
+
+@media (max-width:575px) {
+	body > div.container {
+		margin-top: 0;
+	}
+}
+
+#navbar {
+	background-color: rgba(52,58,64, 0.6) !important;
+	box-shadow: 0 0 16px rgba(0, 0, 0, .4);
+}
+
+#navbar .dropdown-menu {
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+#navbar .dropdown-divider {
+	border-color: #666666;
+}
+
+#navbar .dropdown-item, #navbar .dropdown-item-text {
+	color: #eeeeee;
+}
+#navbar .dropdown-item:hover, #navbar .dropdown-item:focus {
+    color: #16181b;
+}
 
 @media (min-width:992px) {
 	#navbar-user-menu {
@@ -53,6 +113,12 @@ $link-hover-color: lighten($link-color,10%);
 
 body.answer .guest {
 	margin-bottom: 30px;
+}
+
+body.answer_form form {
+	input[type=checkbox] {
+		display: none;
+	}
 }
 
 @media (min-width:992px) {
