--- a/templates/answer/full_form.html.twig
+++ b/templates/answer/full_form.html.twig
@@ -1,4 +1,16 @@
 {% extends 'base.html.twig' %}
+{% form_theme form _self %}
+
+{%- block checkbox_widget -%}
+    <div class="pretty p-default">
+        <input type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
+    </div>
+{%- endblock checkbox_widget -%}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('answer_full_form') }}
+{% endblock %}
 
 {% block headTitle %} {{ text('Réponse - Titre') }} {% endblock %}
 
@@ -85,30 +97,5 @@
 
 {% block javascript %}
     {{ parent() }}
-
-    <script>
-        $("[id$='absent']").change(function () {
-            if ($(this).is(':checked')) {
-                $(this).closest('.form-row').find("input[id$='attendCeremony'], input[id$='attendMeal'], input[id$='attendBrunch'], input[id$='veggie']").each(function() {
-                    $(this).prop("checked", false).prop("disabled", true);
-                });
-            } else {
-                $(this).closest('.form-row').find("input[id$='attendCeremony'], input[id$='attendMeal'], input[id$='attendBrunch'], input[id$='veggie']").each(function() {
-                    $(this).prop("disabled", false);
-                });
-            }
-        }).change();
-
-        $("input[id$='attendCeremony'], input[id$='attendMeal'], input[id$='attendBrunch'], input[id$='veggie']").change(function () {
-            if ($(this).closest('.form-row').find("input[id$='attendCeremony']:checked, input[id$='attendMeal']:checked, input[id$='attendBrunch']:checked, input[id$='veggie']:checked").length > 0) {
-                $(this).closest('.form-row').find("[id$='absent']").each(function() {
-                    $(this).prop("checked", false).prop("disabled", true);
-                });
-            } else {
-                $(this).closest('.form-row').find("[id$='absent']").each(function() {
-                    $(this).prop("disabled", false);
-                });
-            }
-        }).change();
-    </script>
+    {{ encore_entry_script_tags('answer_full_form') }}
 {% endblock %}
