--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,4 +6,8 @@
 
     {{ text('Accueil - Texte') }}
 
+    {% if not app.user.hasAnswered %}
+        <a href="{{ path('answer_form') }}" class="btn btn-primary">Cliquez ici pour donner votre réponse</a>
+    {% endif %}
+
 {% endblock %}
