--- a/templates/wedding_list/_classic_content.html.twig
+++ b/templates/wedding_list/_classic_content.html.twig
@@ -1,5 +1,5 @@
 {% for item in listItems %}
-    <div class="wedding-list-item">
+    <div class="wedding-list-item card">
         <strong class="title">{{ item }}</strong>
         <div class="amount">
             <strong>Montant : {{ item.price }} € </strong>
