--- a/templates/main/access_map.html.twig
+++ b/templates/main/access_map.html.twig
@@ -13,7 +13,7 @@
 {{ text('Plan - Texte') }}
 
 <div id="mapContainer">
-	<div id="mapid" class="d-none d-md-block"></div>
+	<div id="mapid"></div>
 </div>
 
 {% endblock %}
